update with placeholder for a private dovetail nuget feed

--- a/ripple.config
+++ b/ripple.config
@@ -8,9 +8,9 @@
   <DefaultFloatConstraint>Current</DefaultFloatConstraint>
   <DefaultFixedConstraint>Current,NextMajor</DefaultFixedConstraint>
   <Feeds>
+		<Feed Url="{please put your private dovetail nuget feed url here}" Mode="Fixed" Stability="ReleasedOnly" />
     <Feed Url="http://build.fubu-project.org/guestAuth/app/nuget/v1/FeedService.svc" Mode="Float" Stability="ReleasedOnly" />
     <Feed Url="http://nuget.org/api/v2" Mode="Fixed" Stability="ReleasedOnly" />
-    <Feed Url="http://focus.dovetailsoftware.com/nuget/nuget" Mode="Fixed" Stability="ReleasedOnly" />
     <Feed Url="https://www.myget.org/F/fubumvc-edge/" Mode="Fixed" Stability="Anything" />
   </Feeds>
   <Nugets>
